# kerosene-chess

./: .gitignore  CMakeLists.txt
src/: bit_board.hpp  common.hpp  evaluation.cpp  evaluation.hpp  evaluation_constants.hpp  history.hpp  main.cpp  move.cpp  move.hpp  move_generation.cpp  move_generation.hpp  move_picker.cpp  move_picker.hpp  position.cpp  position.hpp  repetition_table.cpp  repetition_table.hpp  score.hpp  search.cpp  search.hpp  search_stack.hpp  time_manager.cpp  time_manager.hpp  transposition_table.cpp  transposition_table.hpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
src/evaluation_tuning/: dataset.cpp  evaluation_features.hpp  evaluation_trace.hpp  sgdm.cpp  sgdm.hpp  tuning_main.cpp
src/util/: bits.hpp  defer.hpp  inplace_vector.hpp  integer_types.hpp  macro.hpp  math.hpp  multi_array.hpp  simd.hpp  template.hpp
