cmake_minimum_required(VERSION 4.1)
project(Kerosene)

set(CMAKE_CXX_STANDARD 23)

set(SRCS
        src/util/integer_types.hpp
        src/uci.cpp
        src/uci.hpp
        src/types.hpp
        src/position.cpp
        src/position.hpp
        src/move.hpp
        src/move.cpp
        src/util/bits.hpp
        src/util/inplace_vector.hpp
        src/move_generation.cpp
        src/move_generation.hpp
        src/util/simd.hpp
        src/util/template.hpp
        src/bit_board.hpp
        src/evaluation.cpp
        src/evaluation.hpp
        src/score.hpp
        src/search.cpp
        src/search.hpp
        src/time_manager.cpp
        src/time_manager.hpp
        src/evaluation_tuning/evaluation_features.hpp
        src/evaluation_tuning/evaluation_trace.hpp
        src/evaluation_tuning/dataset.hpp
        src/evaluation_tuning/dataset.cpp
        src/evaluation_tuning/sgdm.cpp
        src/evaluation_tuning/sgdm.hpp
        src/evaluation_constants.hpp
)

add_executable(Kerosene
        src/main.cpp
        ${SRCS}
)

add_executable(KeroseneTuning
        src/evaluation_tuning/tuning_main.cpp
        ${SRCS}
)
